Se agrego las etiquetas nav, aside y article

--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>Tareas</title>
 </head>
 <body>
+    <header>
+        Esto es un encabezado
+    </header>
+    <nav>
+        esto es una barra de navegacion
+    </nav>
+    <aside>
+        Esto es un aside
+    </aside>
+    <main>
+        Esto es el main
+        <article>esto es un article</article>
+        <article>esto es un article</article>
+        <article>esto es un article</article>
+    </main>
+    <footer>
+        Esto es un footer
+    </footer>
     
 </body>
 </html>
