Se agrego enlace a hoja de estilo

--- a/index.html
+++ b/index.html
@@ -1,30 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css">
     <title>Tareas</title>
-</head>
-<body>
-    <header>
-        Esto es un encabezado
-    </header>
-    <nav>
-        esto es una barra de navegacion
-    </nav>
-    <aside>
-        Esto es un aside
-    </aside>
+  </head>
+  <body>
+    <header>Esto es un encabezado</header>
+    <nav>esto es una barra de navegacion</nav>
+    <aside>Esto es un aside</aside>
     <main>
-        Esto es el main
-        <article>esto es un article</article>
-        <article>esto es un article</article>
-        <article>esto es un article</article>
+      Esto es el main
+      <article>esto es un article</article>
+      <article>esto es un article</article>
+      <article>esto es un article</article>
     </main>
-    <footer>
-        Esto es un footer
-    </footer>
-    
-</body>
+    <footer>Esto es un footer</footer>
+  </body>
 </html>
