Se modifico el texto de las etiquetas

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <title>Tareas</title>
   </head>
   <body>
-    <header>Esto es un encabezado</header>
-    <nav>esto es una barra de navegacion</nav>
-    <aside>Esto es un aside</aside>
+    <header>Header</header>
+    <nav>Nav</nav>
+    <aside>Aside</aside>
     <main>
-      Esto es el main
-      <article>esto es un article</article>
-      <article>esto es un article</article>
-      <article>esto es un article</article>
+      Main
+      <article>Article</article>
+      <article>Article</article>
+      <article>Article</article>
     </main>
-    <footer>Esto es un footer</footer>
+    <footer>Footer</footer>
   </body>
 </html>
