--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <aside>Aside</aside>
     <main>
       Main
-      <article>Article</article>
-      <article>Article</article>
-      <article>Article</article>
+      <section>Section</section>
+      <section>Section</section>
+      <section>Section</section>
     </main>
     <footer>Footer</footer>
   </body>
